@@ -2820,6 +2820,17 @@
       </component>
     </version>
   </module>
+  <module name="pitivi">
+    <version release="HEAD">
+      <component name="pitivi" dir="pitivi" group="extras">
+        <podir dir="po"/>
+        <potname name="PiTiVi.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="printman">
     <version release="HEAD">
       <component name="printman" dir="printman" group="extras">
