@@ -1,3 +1,7 @@
+2006-06-27  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added pitivi to extras.
+
 2006-06-26  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added gimmie to extras.
